opa/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAllowAllNetworkPolicy
metadata:
  name: deny-allow-all-networkpolicy
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["NetworkPolicy"]
